--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "homepage": "https://sapeleD3.github.io/NBAyenagoa",
+  "homepage": "https://sapeleD3.github.io/nba-yenagoa",
   "browserslist": {
     "production": [
       ">0.2%",
